[gd_scene load_steps=3 format=3 uid="uid://inventory_ui_scene"]

[ext_resource type="Script" uid="uid://inventory_ui_script" path="res://Scripts/inventory_ui.gd" id="1_inv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.1, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.3, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -210.0
offset_right = 340.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0

[node name="TitleBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ContentArea" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="ItemGrid" type="GridContainer" parent="Panel/VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/ContentArea"]
layout_mode = 2

[node name="RefineryPanel" type="VBoxContainer" parent="Panel/VBoxContainer/ContentArea"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="RefineryLabel" type="Label" parent="Panel/VBoxContainer/ContentArea/RefineryPanel"]
layout_mode = 2
text = "Backpack Refinery"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="InputSlot" type="Panel" parent="Panel/VBoxContainer/ContentArea/RefineryPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4

[node name="ProcessButton" type="Button" parent="Panel/VBoxContainer/ContentArea/RefineryPanel"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "REFINE ALL"

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBoxContainer/ContentArea/RefineryPanel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 1.0
value = 0.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer/ContentArea/RefineryPanel"]
layout_mode = 2
text = "Select dirt, click input slot"
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
autowrap_mode = 2
